# LVGL9_EMU

./: CMakeLists.txt  README.md  lv_conf.h  main.c
components/lvgl/src/drivers/sdl/: lv_sdl_mouse.c
inc/: ui.h
src/: ui.c
src/porting/sdl/: sdl_port.c  sdl_port.h
